--- a/references.bib
+++ b/references.bib
@@ -541,6 +541,13 @@
 # INPROCEEDING
 ##################################################################################################################
 
+@inproceedings{mikolov2018advances,
+  title={Advances in Pre-Training Distributed Word Representations},
+  author={Mikolov, Tomas and Grave, Edouard and Bojanowski, Piotr and Puhrsch, Christian and Joulin, Armand},
+  booktitle={Proceedings of the International Conference on Language Resources and Evaluation (LREC 2018)},
+  year={2018}
+}
+
 @inproceedings{Feily2009,
   author    = {Feily, Maryam and Shahrestani, Alireza and Ramadass, Sureswaran},
   booktitle = {2009 Third International Conference on Emerging Security Information, Systems and Technologies},
