Fix small stuff

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -47,3 +47,29 @@
 \DeclareAcronym{ncp}{short=NVP, long=Network Control Protocol}
 \DeclareAcronym{tcp}{short=TCP, long=Transmission Control Protocol}
 \DeclareAcronym{dfn}{short=DFN , long=German National Research and Education Network}
+\DeclareAcronym{ssh}{short=SSH, long=Secure Shell}
+\DeclareAcronym{mitm}{short=MITM, long=man-in-the-middle}
+\DeclareAcronym{ftp}{short=FTP, long=File Transport Protocol}
+\DeclareAcronym{smb}{short=SMB, long=Server Message Block}
+\DeclareAcronym{api}{short=API, long=Application Programming Interface}
+\DeclareAcronym{ip}{short=IP, long=Internet Protocol}
+\DeclareAcronym{gpu}{short=GPU, long=graphics processing unit}
+\DeclareAcronym{voip}{short=VoIP, long=Voice over Internet Protocol}
+\DeclareAcronym{gb}{short=GB, long=gigabyte}
+\DeclareAcronym{vcpu}{short=vCPU, long=virtual central processing unit}
+\DeclareAcronym{cpu}{short=CPU, long=central processing unit}
+\DeclareAcronym{ram}{short=RAM, long=random-access memory}
+\DeclareAcronym{xml}{short=XML, long=Extensible Markup Language}
+\DeclareAcronym{usb}{short=USB, long=Universal Serial Bus}
+\DeclareAcronym{imap}{short=IMAP, long=Internet Message Access Protocol}
+\DeclareAcronym{tls}{short=TLS, long=Transport Layer Security}
+\DeclareAcronym{nla}{short=NLA, long=Network Level Authentication}
+\DeclareAcronym{asn}{short=ASN, long=Autonomous System Number}
+\DeclareAcronym{as}{short=AS, long=Autonomous System}
+\DeclareAcronym{cgi}{short=CGI, long=Common Gateway Interface}
+\DeclareAcronym{vnc}{short=VNC, long=Virtual Network Computing}
+\DeclareAcronym{vlan}{short=VLAN, long=Virtual Local Area Network}
+\DeclareAcronym{icmp}{short=ICMP, long=Internet Control Message Protocol}
+\DeclareAcronym{pop}{short=POP, long=Post Office Protocol}
+\DeclareAcronym{sip}{short=SIP, long=Session Initiation Protocol}
+\DeclareAcronym{nat}{short=NAT, long=network address translation}
