--- a/main.tex
+++ b/main.tex
@@ -163,8 +163,8 @@
 \bibliography{references}
 
 % Installation and configuration
-\begin{appendices}
-  \include{chapters/appendix.tex}
-\end{appendices}
+%\begin{appendices}
+%  \include{chapters/appendix.tex}
+%\end{appendices}
 
 \end{document}
