--- a/references.bib
+++ b/references.bib
@@ -379,7 +379,7 @@
 
 @article{lichstei1969,
   title     = {When should you emulate},
-  author    = {Lichstein. HA},
+  author    = {Lichstein, H.A.},
   journal   = {Datamation},
   volume    = {15},
   number    = {11},
