--- a/abstract-eng.tex
+++ b/abstract-eng.tex
@@ -6,14 +6,14 @@
             \textbf{Abstract}
         \end{center}\par
         \vspace{\baselineskip}
-        Nowadays, services accessible from the Internet face more attacks than ever.
+        In this age of digitalization, Internet services face more attacks than ever.
         An attacker's objective is to exploit systems and use them for malicious purposes.
         Such efforts are rising as vulnerable systems can be discovered and compromised through Internet-wide scanning.
         One known methodology besides traditional security leverages is to learn from those who attack it.
         A honeypot helps to collect information about an attacker by pretending to be a vulnerable target.
-        Thus, how honeypots can contribute to more secure infrastructure makes an interesting topic of research.
+        Thus, how honeypots can contribute to a more secure infrastructure makes an interesting topic of research.
         This thesis will present a honeypot solution to investigate malicious activities in heiCLOUD and show that attacks have increased significantly.
-        To detect attackers in restricted network zones at Heidelberg University, the author will create a new concept to discover leaks in the firewall.
+        To detect attackers in restricted network zones at Heidelberg University, a new concept to discover leaks in the firewall will be created.
         Furthermore, to consider an attacker's point of view, a method for detecting honeypots at the transport level will be introduced.
         Lastly, a customized OpenSSH server that works as an intermediary instance will be presented to mitigate these efforts.
         \end{minipage}\par
