--- a/ack.tex
+++ b/ack.tex
@@ -6,7 +6,7 @@ Without his guidance and mentorship I would have not been able to finish this th
 Moreover, I was able to grow as a researcher, and I am immensely grateful for the oppurtunity to continue my research as a future PhD candidate under his supervision.
 
 I would like to thank Stefan Steiger, and Olaf Pichler from the Computing Centre at the Heidelberg University for their invaluable advice at crucial times and their sincere interest in my topic.
-No matter what happened, they always had time and provided me ample support.
+No matter what happened, they always had time and provided me with ample of support.
 
 I am indebted to Joachim Peek for generously agreeing to examine my results and providing meticulous feedback.
 His help to understand essential parts of the topic lead to enormous results.
