--- a/acronyms.tex
+++ b/acronyms.tex
@@ -73,3 +73,4 @@
 \DeclareAcronym{pop}{short=POP, long=Post Office Protocol}
 \DeclareAcronym{sip}{short=SIP, long=Session Initiation Protocol}
 \DeclareAcronym{nat}{short=NAT, long=network address translation}
+\DeclareAcronym{rdbms}{short=RDBMS, long=relational database management system}
