Ack carmen, noice

--- a/ack.tex
+++ b/ack.tex
@@ -1,14 +1,20 @@
 \chapter*{Acknowledgements}
 \thispagestyle{empty}
 
-First and foremost, I am deeply grateful to my supervisor Prof. Dr. Vincent Heuveline for his valuable and constructive input.
-Without his guidance and mentorship I would have not been able to finish this thesis.
-Moreover, I was able to grow as a researcher, and I am immensely grateful for the oppurtunity to continue my research as a future PhD candidate under his supervision.
 
-I would like to thank Stefan Steiger, and Olaf Pichler from the Computing Centre at the Heidelberg University for their invaluable advice at crucial times and their sincere interest in my topic.
-No matter what happened, they always had time and provided me with ample of support.
+The research included in this thesis could not have been performed if not for many individuals' assistance, patience, and support. 
+ 
+First and foremost, I am deeply grateful to my supervisor, Prof. Dr. Vincent Heuveline for his valuable and constructive input.
+Without his guidance and mentorship,
+I would not have been able to finish this thesis.
+Moreover, I grew as a researcher, and I am immensely grateful for the opportunity to continue my research as a future Ph.D. candidate under his supervision. 
 
-I am indebted to Joachim Peek for generously agreeing to examine my results and providing meticulous feedback.
-His help to understand essential parts of the topic lead to enormous results.
+I want to extend my gratitude towards Stefan Steiger and Olaf Pichler from the Computing Centre at Heidelberg University.
+Thank you for offering insightful comments and brilliant suggestions when the task got challenging.
+They always had time and provided me with ample support no matter what happened.
 
-Last but not least, I would like to thank my girlfriend Carmen for her commitment to proofread my thesis, and her patience in listening to all my thoughts during that period of time.
+I am indebted to Joachim Peek for generously agreeing to examine my results and providing valuable inputs.
+His timely advice and scientific knowledge helped me understand essential parts of the topic assisted me to a great extent in accomplishing this task.
+
+Lastly, I could not have completed this thesis without the support of my girlfriend, Carmen.
+Thank you for being so patient in providing emotional support and stimulating discussions during my research.
