--- a/acronyms.tex
+++ b/acronyms.tex
@@ -20,7 +20,7 @@
 \DeclareAcronym{asa}{short=ASA, long=Adaptive Security Appliance}
 \DeclareAcronym{dos}{short=DoS, long=Denial of Service}
 \DeclareAcronym{adc}{short=ADC, long=Application Delivery Controller}
-\DeclareAcronym{ics}{short=ICS, long=Industrial control systems}
+\DeclareAcronym{ics}{short=ICS, long=Industrial Control System}
 \DeclareAcronym{scada}{short=SCADA, long=Supervisory Control and Data Acquisition}
 \DeclareAcronym{ddos}{short=DDoS, long=Distributed Denial of Service}
 \DeclareAcronym{ntp}{short=NTP, long=Network Time Protocol}
@@ -74,3 +74,4 @@
 \DeclareAcronym{sip}{short=SIP, long=Session Initiation Protocol}
 \DeclareAcronym{nat}{short=NAT, long=network address translation}
 \DeclareAcronym{rdbms}{short=RDBMS, long=relational database management system}
+\DeclareAcronym{dsa}{short=DSA, long=Digital Signature Algorithm}
