--- a/main.tex
+++ b/main.tex
@@ -32,7 +32,7 @@
 \NewAcroCommand\acg{m}{\acropossessive\UseAcroTemplate{first}{#1}}
 \NewAcroCommand\acsg{m}{\acropossessive\UseAcroTemplate{short}{#1}}
 \NewAcroCommand\aclg{m}{\acropossessive\UseAcroTemplate{long}{#1}}
-
+\usepackage[super]{nth}
 % Needed to get rid of warnings in scrreprt with toc deprecated
 \usepackage{scrhack}
 % TODOs package, could be removed in the final paper
