VH review, finally done

--- a/deposition.tex
+++ b/deposition.tex
@@ -1,9 +1,20 @@
 \thispagestyle{empty}
 \setlength{\parindent}{0em}
 
-Erkl\"{a}rung:\par
+\chapter*{Erklärung}
+\thispagestyle{empty}
+
 \vspace{3\baselineskip}
-Ich versichere, dass ich diese Arbeit selbstst\"{a}ndig verfasst habe und keine
-anderen als die angegebenen Quellen und Hilfsmittel benutzt habe.\par
+Ich versichere hiermit, dass ich die vorliegende Arbeit selbständig verfasst und keine anderen als die angegebenen Hilfsmittel benutzt habe. 
+Sowohl inhaltlich als auch wörtlich entnommene Inhalte wurden als solche kenntlich gemacht.
+
+Die Arbeit ist in gleicher oder vergleichbarer Form noch bei keiner anderen Prüfungsbehörde eingereicht worden.
 \vspace{5\baselineskip}
-Heidelberg, den (Datum)\hspace{3cm}\dotfill
+
+\begin{tabular}[t]{c}
+    Heidelberg, den 01.02.2022
+\end{tabular}
+\hfill
+\begin{tabular}[t]{c}
+    \rule{15em}{0.4pt} \\ Stefan Machmeier
+\end{tabular}
