--- a/titlepages-eng.tex
+++ b/titlepages-eng.tex
@@ -8,9 +8,9 @@
   Master thesis\\
   in Computer Science\\
   submitted by\\
-  Stefan Machmeier\\
+  Stefan Machmeier, 3604391\\
   born in Heidelberg\\
-  2021
+  2022
 \end{center}
 \newpage
 
