Update latest version

--- a/ack.tex
+++ b/ack.tex
@@ -13,7 +13,7 @@ I want to extend my gratitude towards Stefan Steiger and Olaf Pichler from the C
 Thank you for offering insightful comments and brilliant suggestions when the task got challenging.
 They always had time and provided me with ample support no matter what happened.
 
-I am indebted to Joachim Peek for generously agreeing to examine my results and providing valuable inputs.
+I am indebted to Joachim Peeck for generously agreeing to examine my results and providing valuable inputs.
 His timely advice and scientific knowledge helped me understand essential parts of the topic assisted me to a great extent in accomplishing this task.
 
 Lastly, I could not have completed this thesis without the support of my girlfriend, Carmen.
