--- a/main.tex
+++ b/main.tex
@@ -32,6 +32,7 @@
 \NewAcroCommand\acg{m}{\acropossessive\UseAcroTemplate{first}{#1}}
 \NewAcroCommand\acsg{m}{\acropossessive\UseAcroTemplate{short}{#1}}
 \NewAcroCommand\aclg{m}{\acropossessive\UseAcroTemplate{long}{#1}}
+% nth library for dates
 \usepackage[super]{nth}
 % Needed to get rid of warnings in scrreprt with toc deprecated
 \usepackage{scrhack}
@@ -39,7 +40,6 @@
 % set length necessary to get rid warning message
 \setlength {\marginparwidth }{2cm} 
 \usepackage[toc,page]{appendix}
-\usepackage{tabularx}
 % Inline listing
 \usepackage[inline]{enumitem}
 % top and bottom rule for tables
