Add changes for arxiv publish

--- a/titlepages-eng.tex
+++ b/titlepages-eng.tex
@@ -8,7 +8,7 @@
   Master thesis\\
   in Computer Science\\
   submitted by\\
-  Stefan Machmeier, 3604391\\
+  Stefan Machmeier\\
   born in Heidelberg\\
   2022
 \end{center}
